--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>捲動至指定元素 套件</title>
+
+    <!-- 和scss連動 -->
+    <link rel="stylesheet" href="./style.scss">
 </head>
 
-<body>
+<body id="top">
 
     <!-- data-st-target 要前往的元素的ID名稱 -->
     <!-- data-st = data-scrollToElement -->
-    <!-- data-st-duration 捲動所花的時間 -->
+    <!-- data-st-duration 捲動所花的時間  (毫秒) -->
+     <!-- data-st-offset 位移的大小 -->
+
     <nav>
         <a href=""data-st-target="area1" data-st-duration="1000">連結1</a>
         <a href=""data-st-target="area1" data-st-duration="2000">連結2</a>
@@ -22,6 +27,11 @@
     <section id="area1">區塊1</section>
     <section id="area2">區塊2</section>
     <section id="area3">區塊3</section>
+
+    <a id="arrow" data-st-target="top" data-st-duration="800"></a>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./main.js"></script>
 
 </body>
 
